--- a/css/footage_procedures.css
+++ b/css/footage_procedures.css
@@ -4,6 +4,21 @@
 
 #status_span, #blinking_span {font-size:40px;}
 
+tr td:first-child {
+  text-align: right;
+
+}
+
+div#xml_prefs_editor_wrapper {
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
+}
+
+iframe {
+  border: 0px;
+}
+
 .button {
     font-size:12px;
     color:#fff;
@@ -60,6 +75,10 @@ input, .padding {
     padding: 2px 5px 2px 5px;
 }
 
+input.file {
+  width: 32em;
+}
+
 #step1_div {
   background: rgba(100,200,100,0.3);
   width: 800px;
@@ -84,6 +103,6 @@ input, .padding {
 
 #step3_kml_gen_div {position:relative;top:20px;}
 
-li.directory.selected { background-color: cyan }
+li.directory.selected a, li.file.selected a { background-color: cyan }
 
 
